--- a/index.css
+++ b/index.css
@@ -174,8 +174,20 @@ body {
 .next1 .title {
     width: 78%;
     margin: 12%;
+    background: #000;
 }
 
+.next1 .title-top {
+    position: absolute;
+    width: 100%;
+    height: 22%;
+    background: #000;
+   /* -webkit-transition: width 1s linear 2s;
+    transition: width 1s linear  2s;*/
+}
+#next1 .title-top{
+    width: 0;
+}
 .next1 .title span {
     display: block;
     width: 18%;
@@ -472,9 +484,10 @@ body {
     text-align: center;
     font-size: 30px;
     color: #fff;
-    margin-top: 4%;
+    margin: 4% 0;
     opacity: 0;
-    transition: 2s;
+    -webkit-transition: opacity 1s linear 1s;
+    transition: opacity 1s linear 1s;
 }
 
 #next4 p:nth-child(3) {
@@ -482,18 +495,21 @@ body {
 }
 
 .next4 .xn {
-    margin-top: 20%;
+    margin-top: 150px;
     text-align: center;
     font-size: 24px;
     color: #fff;
     opacity: 0;
 }
 
+.next4 .xn {
+    -webkit-transition: all 1s linear 2s;
+    transition: all 1s linear 2s;
+}
+
 #next4 .xn {
     opacity: 0.5;
-    margin-top: 10px;
-    -webkit-transition: 3s;
-    transition: 3s;
+    margin-top: 15px;
 }
 
 
